--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         I have been supported by an NSF graduate research fellowship.
         <br>
         <br>I am interested in number theory and arithmetic geometry. I have been working on topics
-            concerning special cycles on Shimura varieties, particularly in Kudla's program.
+            concerning special cycles on Shimura varieties, such as in Kudla's program.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
@@ -479,7 +479,7 @@
       <br>
       <p> 
         <small>
-          Last updated: May 2024.
+          Last updated: June 2024.
         </small>
       </p>
       <p> 
