Update home page

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <br>
         <br>I am interested in number theory and arithmetic geometry. I have been working on topics
             concerning special cycles on Shimura varieties, such as in Kudla's program.
+        <br>
+        <br>I am on the job market in 2024.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
@@ -58,10 +60,66 @@
           Comments welcome!
           <br>
           <br>
-          Non-highlighted links such as [abstract] may also be clicked.
+          Non-highlighted links such as [abstract] and some collaborator names may also be clicked.
+          <br>
           <br>
         </small>
       </p>
+<!-- -------------------------------------- -->  
+      <p class="hanging-indent">
+        <strong>Faltings heights and the subleading terms of adjoint $L$-functions</strong>
+	      <br>
+        <span class="depth-1">
+          with
+          <a href="https://weixiao-lu.github.io/" class="no-decoration">Weixiao Lu</a> and 
+          <a href="https://math.mit.edu/~wz2113/" class="no-decoration">Wei Zhang</a>.
+        </span>
+        <br>
+        <span class="depth-2">
+          In preparation.
+        </span>
+        <br>
+        <span class="depth-2">
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('heights-Ad-L');">abstract</a>]
+          </small>
+        </span>
+      </p>
+
+      <div id="heights-Ad-L" style="display: none">
+        <p class="hanging-indent">
+        <span class="depth-2">
+          (From <a href="https://www.mpim-bonn.mpg.de/node/13134">conference</a>, July 2024)
+        </span>
+        <br>
+        <br>
+        <span class="depth-2-indent">
+          The Kronecker limit formula
+          may be interpreted as an equality relating the Faltings height of a CM elliptic curve
+          to the sub-leading term (at $s=0$) of the Dirichlet $L$-function of an
+          imaginary quadratic character. Colmez conjectured a generalization relating the Faltings height
+          of any CM abelian variety to the subleading terms of certain Artin $L$-functions.
+          An averaged (over all abelian varieties with CM by the integer ring of a given CM field)
+          version was proved by Andreatta&ndash;Goren&ndash;Howard&ndash;Madapusi and Yuan&ndash;Zhang.
+        </span>
+        <span class="depth-2-indent">
+          We formulate a “non-Artinian” generalization of Colmez's conjecture, relating the following two quantities:
+        </span>
+        <span class="depth-4">
+          (1) the arithmetic intersection numbers from the Hodge bundle and certain cycles on unitary Shimura varieties, and
+          <br>
+          (2) the sub-leading terms of the adjoint $L$-functions of (cohomological) automorphic representations of $U(n)$.
+        </span>
+        <span class="depth-2">
+          The case $n=1$ amounts to the averaged Colmez conjecture. We are able to prove our conjecture when $n=2$.
+        </span>  
+        <br>
+        <br>
+        <span class="depth-2">
+          Work in progress with Weixiao Lu and Wei Zhang.
+        </span>
+        </p>
+      </div>
 <!-- -------------------------------------- -->  
       <p class="hanging-indent">
         <a href="papers/corank1_ASW_IV.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil IV: Analytic local-to-global</strong></a>
@@ -74,7 +132,6 @@
           <small>
             [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_IV');">abstract</a>]
             [<a href="https://arxiv.org/abs/2405.01429" class="no-decoration">arXiv</a> (2024)]
-            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_AIM_video');">video</a> (2024)]
           </small>
         </span>
       </p>
@@ -97,38 +154,6 @@
         result for degrees of complex $0$-cycles. Using this, we complete the proof of
         our arithmetic Siegel&ndash;Weil results by patching together the
         local main theorems from our companion papers.
-      </span>
-      </p>
-      </div>
-
-      <div id="corank1_ASW_AIM_video" style="display: none">
-      <p class="hanging-indent">
-      <span class="depth-2-indent">
-        This <a href="https://vimeo.com/showcase/10901961/video/902463462">video</a>
-        is a recording of my talk at the workshop 
-        <a href="https://aimath.org/pastworkshops/intersectshimura.html">Arithmetic intersection theory on Shimura varieties</a>
-        at the American Institute of Mathematics (AIM) in January 2024.
-        The talk surveys my four-paper sequence "Co-rank $1$ Arithmetic Siegel&ndash;Weil I&ndash;IV".
-        Some notation from the talk differs slightly from my papers.
-      </span>
-      <br>
-      <br>
-      <span class="depth-2">
-      <em>Talk errata</em>
-      </span>
-      <br>
-      <br>
-      <span class="depth-2-indent">        
-        At 17:00 in the video, I should have only claimed that the expression $\Lambda$ is 
-        given by the formula I wrote on the upper left board when $m = n$. 
-        In general, see Section 6 (or Remark 1.3.2) in 
-        <a href="https://arxiv.org/abs/2405.01429">Co-rank 1 Arithmetic Siegel&ndash;Weil IV</a>.
-      </span>
-      <span class="depth-2-indent">        
-        At 55:00 in the video, I thought I forgot a sign when defining the constant $h^{\mathrm{CM}}_{\widehat{\mathcal{E}}^{\vee}}$
-        at the beginning of the talk, so I added an extra sign at this point in the talk. But I did not actually 
-        forget the extra sign at the beginning, so the sign here is extraneous. See the formulas in 
-        Section 9 of <a href="https://arxiv.org/abs/2405.01429">Co-rank 1 Arithmetic Siegel&ndash;Weil IV</a>.
       </span>
       </p>
       </div>
@@ -221,6 +246,7 @@
           <small>
             [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_I');">abstract</a>]
             [<a href="https://arxiv.org/abs/2405.01426" class="no-decoration">arXiv</a> (2024)]
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_AIM_video');">video</a> (2024)]
             [<a href="papers/corank1_ASW.pdf">combined I&ndash;IV</a>]
           </small>
         </span>
@@ -247,18 +273,50 @@
       </span>
       </p>
       </div>
+      
+      <div id="corank1_ASW_AIM_video" style="display: none">
+        <p class="hanging-indent">
+        <span class="depth-2-indent">
+          This <a href="https://vimeo.com/showcase/10901961/video/902463462">video</a>
+          is a recording of my talk at the workshop 
+          <a href="https://aimath.org/pastworkshops/intersectshimura.html">Arithmetic intersection theory on Shimura varieties</a>
+          at the American Institute of Mathematics (AIM) in January 2024.
+          The talk surveys my four-paper sequence "Co-rank $1$ Arithmetic Siegel&ndash;Weil I&ndash;IV".
+          Some notation from the talk differs slightly from my papers.
+        </span>
+        <br>
+        <br>
+        <span class="depth-2">
+        <em>Talk errata</em>
+        </span>
+        <br>
+        <br>
+        <span class="depth-2-indent">        
+          At 17:00 in the video, I should only have claimed that the expression $\Lambda$ is 
+          given by the formula I wrote on the upper left board when $m = n$. 
+          In general, see Section 6 (or Remark 1.3.2) in 
+          <a href="https://arxiv.org/abs/2405.01429">Co-rank 1 Arithmetic Siegel&ndash;Weil IV</a>.
+        </span>
+        <span class="depth-2-indent">        
+          At 55:00 in the video, I thought I forgot a sign when defining the constant $h^{\mathrm{CM}}_{\widehat{\mathcal{E}}^{\vee}}$
+          at the beginning of the talk, so I added an extra sign at this point in the talk. But I did not actually 
+          forget the extra sign at the beginning, so the sign here is extraneous. See the formulas in 
+          Section 9 of <a href="https://arxiv.org/abs/2405.01429">Co-rank 1 Arithmetic Siegel&ndash;Weil IV</a>.
+        </span>
+        </p>
+        </div>
 <!-- -------------------------------------- -->    
       <p class="hanging-indent">
         <a href="papers/CKL19.pdf"><strong>A refined conjecture for the variance of Gaussian primes across sectors</strong></a>
-	<br>
+	      <br>
         <span class="depth-1">
           with <a href="https://yujinhkim.github.io/" class="no-decoration">Yujin H. Kim</a>,
           <a href="https://web.stanford.edu/~jdl18/" class="no-decoration">Jared D. Lichtman</a>,
           <a href="https://sites.williams.edu/sjm1/" class="no-decoration">Steven J. Miller</a>,
-          Alina Shubina,
-          Shannon Sweitzer,
+          <a href="https://english.columbia.edu/content/alina-shubina" class="no-decoration">Alina Shubina</a>,
+          <a href="https://www.researchgate.net/profile/Shannon-Sweitzer" class="no-decoration">Shannon Sweitzer</a>,
           <a href="https://sites.google.com/site/ezrawaxman/home" class="no-decoration">Ezra Waxman</a>,
-          Eric Winsor,
+          <a href="https://dblp.org/pid/241/4354.html" class="no-decoration">Eric Winsor</a>,
           and <a href="https://www.linkedin.com/in/jianing-yang-65186378" class="no-decoration">Jianing Yang</a>.
         </span>
         <br>
@@ -345,7 +403,7 @@
           <a href="https://web.stanford.edu/~jdl18/" class="no-decoration">Jared Duker Lichtman</a>, 
           <a href="https://www.linkedin.com/in/blake-mackall-31391b139" class="no-decoration">Blake Mackall</a>,
           <a href="https://sites.williams.edu/sjm1/" class="no-decoration">Steven J. Miller</a>,
-          Eric Winsor,
+          <a href="https://dblp.org/pid/241/4354.html" class="no-decoration">Eric Winsor</a>,
           <a href="https://karlwinsor.github.io/" class="no-decoration">Karl Winsor</a>,
           <a href="https://www.linkedin.com/in/jianing-yang-65186378" class="no-decoration">Jianing Yang</a>,
           and <a href="https://yang-kev.github.io/" class="no-decoration">Kevin Yang</a>.
@@ -394,8 +452,8 @@
           with <a href="https://yujinhkim.github.io/" class="no-decoration">Yujin H. Kim</a>, 
           <a href="https://web.stanford.edu/~jdl18/" class="no-decoration">Jared D. Lichtman</a>, 
           <a href="https://sites.williams.edu/sjm1/" class="no-decoration">Steven J. Miller</a>, 
-          Shannon Sweitzer, 
-          and Eric Winsor.
+          <a href="https://www.researchgate.net/profile/Shannon-Sweitzer" class="no-decoration">Shannon Sweitzer</a>, 
+          and <a href="https://dblp.org/pid/241/4354.html" class="no-decoration">Eric Winsor</a>.
         </span>
         <br>
         <span class="depth-2">
@@ -447,7 +505,7 @@
           </em>, vol. 25 no. 3 (2018), pp. 1&ndash;14.
         </span>
         <br>
-	<span class="depth-2">
+	      <span class="depth-2">
           <small>  
             [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('ACF16');">abstract</a>]
             [<a href="https://arxiv.org/abs/1608.04279" class="no-decoration">arXiv</a> (2016)]
@@ -476,10 +534,59 @@
       </p>
       </div>
 <!-- -------------------------------------- -->
+ Other (not on <tt>arXiv</tt>):
+
+  <p class="hanging-indent">
+  <strong>
+  Integer points on complements of dual curves and on genus one modular curves
+  </strong>
+  <br>
+  <span class = "depth-2">
+  Undergraduate thesis.
+  </span>
+  <br>
+  <span class="depth-2">
+    <small>  
+      [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('undergradThesisAbstract');">abstract</a>]
+      [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('undergradThesisREADME');">readme</a>]
+    </small>     
+  </span>
+  
+  <div id="undergradThesisAbstract" style="display: none">
+    <p class="hanging-indent">
+    <span class="depth-2-indent">
+      Higher dimensional analogues of Siegel's theorem on
+      finiteness of integer points are known in limited cases 
+      and often come with restrictions on the divisor at infinity, 
+      e.g. that the divisor should have many irreducible components. 
+      In the first half of this thesis, we give a new class of 
+      prime divisors in the plane, namely duals of certain smooth 
+      plane curves, whose complements have finitely many integer points. 
+      This is accomplished using a moduli of curves interpretation. 
+      In the second half of this thesis, we give verify finiteness 
+      of integer points on genus one modular curves.
+      This result is not new, but the proof we give is based 
+      on the $p$-adic period map and ideas from a recent proof of
+      the Mordell conjecture (Faltings's theorem) by Lawrence and Venkatesh.
+    </span>
+    </p>
+  </div>
+  <div id="undergradThesisREADME" style="display: none">
+    <p class="hanging-indent">
+    <span class="depth-2">
+      This work would benefit from revision.
+      Nevertheless, an original (unrevised) version from 2019 is available
+      <a href="papers/undergradThesis.pdf">here</a>.
+      Alternatively, see Princeton's database <a href="https://dataspace.princeton.edu/handle/88435/dsp018k71nk94t">here</a>.
+    </span>
+    </p>
+  </div>
+  </p>
+<!-- -------------------------------------- -->
       <br>
       <p> 
         <small>
-          Last updated: June 2024.
+          Last updated: July 2024.
         </small>
       </p>
       <p> 
