--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>I am interested in number theory and arithmetic geometry. I have been working on topics
             concerning special cycles on Shimura varieties, such as in Kudla's program.
         <br>
-        <br>I am on the job market in 2024.
+        <br>I am on the job market in Fall 2024.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
@@ -534,7 +534,7 @@
       </p>
       </div>
 <!-- -------------------------------------- -->
- Other (not on <tt>arXiv</tt>):
+ Other (not on arXiv):
 
   <p class="hanging-indent">
   <strong>
@@ -575,7 +575,7 @@
     <p class="hanging-indent">
     <span class="depth-2">
       This work would benefit from revision.
-      Nevertheless, an original (unrevised) version from 2019 is available
+      An original (unrevised) version from 2019 is available
       <a href="papers/undergradThesis.pdf">here</a>.
       Alternatively, see Princeton's database <a href="https://dataspace.princeton.edu/handle/88435/dsp018k71nk94t">here</a>.
     </span>
@@ -586,7 +586,7 @@
       <br>
       <p> 
         <small>
-          Last updated: July 2024.
+          Last updated: August 2024.
         </small>
       </p>
       <p> 
