--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 </head>
 <body>
   <div class="container">
-    <div class="column right-column">
+    <div class="flex-column right-align-column">
       <img src="ryan_chen_profile.jpg" alt="ryan_chen">
     </div>
-    <div class="column left-column">
+    <div class="fixed-width-column left-align-column">
       <h1>Ryan C. Chen</h1>
       <p>I am a PhD student in the math department at 
         <a href="https://math.mit.edu/">MIT</a>. My advisor is 
@@ -595,7 +595,7 @@
         </small>
       </p>
     </div>
-    <div class="column left-column">
+    <div class="flex-column left-align-column">
     </div>
   </div>
 
