--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <p>I am a PhD student in the math department at 
         <a href="https://math.mit.edu/">MIT</a>. My advisor is 
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
-        I have been supported by an NSF graduate research fellowship.
+        I have been supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
         <br>
         <br>I am interested in number theory and arithmetic geometry. I have been working on topics
             concerning special cycles on Shimura varieties, such as in Kudla's program.
         <br>
-        <br>I am on the job market in Fall 2024.
+        <br>I am on the job market during the 2024&ndash;2025 academic year.
       </p>
       <div>
-        <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
+        <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b>
         <span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>&#x40</span><span>mi</span><span>t.e</span><span>du</span>
       </div>
       <p>
@@ -586,7 +586,7 @@
       <br>
       <p> 
         <small>
-          Last updated: August 2024.
+          Last updated: September 2024.
         </small>
       </p>
       <p> 
