--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
   <title>Ryan C. Chen</title>
   <link rel="stylesheet" href="css/column_styles.css">
   <style></style>
