--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
         I have been supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
         <br>
-        <br>I am interested in number theory and arithmetic geometry. I have been working on topics
-            concerning special cycles on Shimura varieties, such as in Kudla's program.
+        <br>I am interested in number theory and arithmetic geometry. I have been working with special cycles on Shimura varieties, particularly their relations with automorphic forms and $L$-functions, such as in Kudla's program.
         <br>
         <br>I am on the job market during the 2024&ndash;2025 academic year.
       </p>
