Update website description

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
         I have been supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
         <br>
-        <br>I am interested in number theory and arithmetic geometry. I have been working with special cycles on Shimura varieties, particularly on their relations with automorphic forms and $L$-functions, such as in Kudla's program.
+        <br> I will be <a href = "https://www.claymath.org/" class="no-decoration">Clay Research Fellow</a> starting in 2025. During the 2025&ndash;2026 academic year, I will be at <a href = "https://www.math.princeton.edu/" class="no-decoration">Princeton</a>.
         <br>
-        <br>I am on the job market during the 2024&ndash;2025 academic year.
+        <br> I am interested in number theory and arithmetic geometry. I have been working with special cycles on Shimura varieties, particularly on their relations with automorphic forms and $L$-functions, such as in Kudla's program.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b>
