--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
         I have been supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
         <br>
-        <br> I will be <a href = "https://www.claymath.org/" class="no-decoration">Clay Research Fellow</a> starting in 2025. During the 2025&ndash;2026 academic year, I will be at <a href = "https://www.math.princeton.edu/" class="no-decoration">Princeton</a>.
+        <br> I will be a <a href = "https://www.claymath.org/" class="no-decoration">Clay Research Fellow</a> starting in 2025. During the 2025&ndash;2026 academic year, I will be at <a href = "https://www.math.princeton.edu/" class="no-decoration">Princeton</a>.
         <br>
         <br> I am interested in number theory and arithmetic geometry. I have been working with special cycles on Shimura varieties, particularly on their relations with automorphic forms and $L$-functions, such as in Kudla's program.
       </p>
