--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
     </div>
     <div class="fixed-width-column left-align-column">
       <h1>Ryan C. Chen</h1>
-      <p>I am a PhD student in the math department at 
-        <a href="https://math.mit.edu/">MIT</a>. My advisor is 
-        <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
-        I have been supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
+      <p> I am currently a <a href = "https://www.claymath.org/" class="no-decoration">Clay Research Fellow</a>.
+          During the 2025&ndash;2026 academic year, I will be at <a href = "https://www.math.princeton.edu/" class="no-decoration">Princeton</a>.
         <br>
-        <br> I will be a <a href = "https://www.claymath.org/" class="no-decoration">Clay Research Fellow</a> starting in 2025. During the 2025&ndash;2026 academic year, I will be at <a href = "https://www.math.princeton.edu/" class="no-decoration">Princeton</a>.
+        <br> I received my PhD in 2025 from the math department at 
+        <a href="https://math.mit.edu/" class = "no-decoration">MIT</a>. My advisor was
+        <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
+        I was partially supported by an <a href = "https://www.nsfgrfp.org/" class="no-decoration">NSF graduate research fellowship</a>.
         <br>
         <br> I am interested in number theory and arithmetic geometry. I have been working with special cycles on Shimura varieties, particularly on their relations with automorphic forms and $L$-functions, such as in Kudla's program.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b>
-        <span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>&#x40</span><span>mi</span><span>t.e</span><span>du</span>
+        <TT><span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>.ma</span><span class="yalpsid">727</span><span>th</span><span>&#x40</span><span>gm</span><span>ail.c</span><span>om</span></TT> (permanent)
+        or
+        <TT><span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>&#x40</span><span>mi</span><span>t.e</span><span>du</span></TT> (deactivating)
       </div>
       <p>
         <b>Curriculum vitae:</b>
@@ -586,7 +589,7 @@
       <br>
       <p> 
         <small>
-          Last updated: January 2025.
+          Last updated: July 2025.
         </small>
       </p>
       <p> 
