Remove MIT accessbility link

--- a/index.html
+++ b/index.html
@@ -589,12 +589,7 @@
       <br>
       <p> 
         <small>
-          Last updated: July 2025.
-        </small>
-      </p>
-      <p> 
-        <small>
-          <a href="http://accessibility.mit.edu">Accessibility</a>
+          Last updated: July 2025
         </small>
       </p>
     </div>
