Update email address

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b>
-        <TT><span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>.ma</span><span class="yalpsid">727</span><span>th</span><span>&#x40</span><span>gm</span><span>ail.c</span><span>om</span></TT> (permanent)
-        or
-        <TT><span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>&#x40</span><span>mi</span><span>t.e</span><span>du</span></TT> (deactivating)
+        <TT><span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>.ma</span><span class="yalpsid">727</span><span>th</span><span>&#x40</span><span>gm</span><span>ail.c</span><span>om</span></TT>
       </div>
       <p>
         <b>Curriculum vitae:</b>
@@ -589,7 +587,7 @@
       <br>
       <p> 
         <small>
-          Last updated: July 2025
+          Last updated: August 2025
         </small>
       </p>
     </div>
