--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
         <b>Curriculum vitae:</b>
         [<a href="rcchen_CV.pdf">CV</a>]
       </p>
+
+      <p>
+        <b>Office:</b>
+        Fine 610
+      </p>
       <br>
       <h2>Research</h2>
 <!-- -------------------------------------- -->
