--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+  <link rel="shortcut icon" type="image/x-icon" href="PU_mark.svg?">
   <title>Ryan C. Chen</title>
   <link rel="stylesheet" href="css/column_styles.css">
   <style></style>
@@ -592,7 +592,7 @@
       <br>
       <p> 
         <small>
-          Last updated: October 2025
+          Last updated: November 2025
         </small>
       </p>
     </div>
