Update home page

--- a/index.html
+++ b/index.html
@@ -128,6 +128,43 @@
       </div>
 <!-- -------------------------------------- -->  
       <p class="hanging-indent">
+        <a href="papers/LV-degen.pdf"><strong>Towards Lang&ndash;Vojta via Degeneration</strong></a>
+	      <br>
+        <span class="depth-1">
+          with
+          <a href="https://www.mat.uc.cl/~natalia.garcia/" class="no-decoration">Natalia Garcia-Fritz</a>,
+          <a href="https://sites.google.com/view/sidmathur/home" class="no-decoration">Siddharth Mathur</a>, and 
+          <a href="https://www.mat.uc.cl/~hector.pasten/" class="no-decoration">Hector Pasten</a>.
+        </span>
+        <br>
+        <span class="depth-2">
+          <a href="https://arxiv.org/abs/2602.06956">Preprint</a>, pp. 1&ndash;25.
+        </span>
+        <br>
+        <span class="depth-2">
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('LV-degen');">abstract</a>]
+            [<a href="https://arxiv.org/abs/2602.06956" class="no-decoration">arXiv</a> (2026)]
+          </small>
+        </span>
+      </p>
+
+      <div id="LV-degen" style="display: none">
+        <p class="hanging-indent">
+        <span class="depth-2-indent">
+          Towards the Lang&ndash;Vojta conjecture, we prove results on finiteness and Zariski degeneracy of $S$-integral
+          points of varieties over number fields $k$, including many cases with geometrically irreducible boundary divisors.
+          Our approach builds on the study of arithmetic and geometric properties of moduli spaces of curves with extra structure. 
+          As an application, we provide families of explicit examples of geometrically irreducible divisors on the projective plane
+          (such as the dual of any smooth curve of degree at least $3$), with respect to which the sets of $S$-integral points are finite.
+          Answering a question of Achenjang and Morrow, we show that, other than the case of curves,
+          every normal projective variety admits a geometrically irreducible divisor $D$ for which finiteness
+          of $(D,S)$-integral points holds over every finite extension of $k$. 
+        </span>
+        </p>
+      </div>
+<!-- -------------------------------------- -->  
+      <p class="hanging-indent">
         <a href="papers/corank1_ASW_IV.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil IV: Analytic local-to-global</strong></a>
         <br>
         <span class="depth-2">
@@ -592,7 +629,7 @@
       <br>
       <p> 
         <small>
-          Last updated: November 2025
+          Last updated: February 2026
         </small>
       </p>
     </div>
